test/fixtures/syntaxError/spec/test-spec.js
describe("syntax error test specs", function() {

  it("specs should pass but task should fail", function() {
    expect(true).toBeTruthy();
  });

});
